# osg_vala_wrapper

./: .gitignore  Makefile  Makefile-termux  build.sh  meson.build  run.sh
src/: meson.build  outline.vala  wrapper.cpp
src/osg/: BufferData.vala  Camera.vala  DisplaySettings.vala  Drawable.vala  Geometry.vala  Group.vala  Image.vala  Node.vala  OSGObject.vala  Transform.vala  Vec4f.vala  Viewer.vala  meson.build
src/osg/FX/: Effect.vala  Outline.vala  Outline_wrap.cpp  meson.build
src/osg/Math/: Vec2f.vala  Vec2f_wrap.cpp  Vec2i.vala  Vec2i_wrap.cpp  Vec3f.vala  Vec3f_wrap.cpp  Vec3i.vala  Vec3i_wrap.cpp  Vec4f.vala  Vec4f_wrap.cpp  Vec4i.vala  Vec4i_wrap.cpp  meson.build
src/osg/Viewer/: Viewer.vala  Viewer_wrap.cpp  meson.build
src/osg/wrappers/: BufferData_wrap.cpp  Camera_wrap.cpp  DisplaySettings_wrap.cpp  Drawable_wrap.cpp  Geometry_wrap.cpp  Group_wrap.cpp  Image_wrap.cpp  Node_wrap.cpp  Vec4f_wrap.cpp  View_wrap.cpp  meson.build
