subdir('wrappers')

sources += files(
    'OSGObject.vala',

    'BufferData.vala',
    'Vec4f.vala',
    'Node.vala',
    'Transform.vala',
    'Group.vala',
    'Drawable.vala',
    'Image.vala',
    'Geometry.vala',
    'Camera.vala',
    'DisplaySettings.vala',
    'Viewer.vala',
)

subdir('FX')